perf: replace  with avoid waiting for the next event loop cycle, by queueing the expressions and lets angular decide in which digest it should run

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -8,7 +8,7 @@
 
     <div>
       <h3>Conditional render</h3>
-      <react-button re-cb-on-click="toggleDetails()">
+      <react-button re-cb-on-click="toggleDetails(showDetails)">
         <span>Toggle Details</span>
       </react-button>
 
