--- a/demo/demo.html
+++ b/demo/demo.html
@@ -65,6 +65,8 @@
         </div>
       </react-container>
     </react-row>
+
+    <react-list re-in-items="layout"></react-list>
     <hr />
   </div>
 </div>
